refactor: no longer possible to set invite code during login
