# app/handlers/handlers.go
@@ -452,10 +452,6 @@ func (s appService) addChannelAndVersionInfo(ctx context.Context, in *pb.UserLog
 		u.VersionCode = in.VersionCode
 		hasExtra = true
 	}
-	if in.InviteCode != "" && u.InviteCode == "" {
-		u.InviteCode = in.InviteCode
-		hasExtra = true
-	}
 
 	if hasExtra {
 		err = s.ur.Save(ctx, u)
